fixef warning with align item start consider using flex start, i just deleted it on contact__info :fire:

--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -43,7 +43,6 @@
   &__info {
     margin-top: 16px;
     display: flex;
-    align-items: start;
     flex-wrap: wrap;
     gap: 1rem;
 
